--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,16 @@
     <dependencies>
 
 
-        <!-- https://mvnrepository.com/artifact/jakarta.xml.bind/jakarta.xml.bind-api -->
+    <!-- https://mvnrepository.com/artifact/io.milton/milton-server-ce -->
+    <dependency>
+        <groupId>io.milton</groupId>
+        <artifactId>milton-server-ce</artifactId>
+        <version>4.0.5.2400</version>
+    </dependency>
+
+
+
+    <!-- jOOQ Core -->
         <dependency>
             <groupId>jakarta.xml.bind</groupId>
             <artifactId>jakarta.xml.bind-api</artifactId>
