--- a/docRestApi/doc.yaml
+++ b/docRestApi/doc.yaml
@@ -376,6 +376,19 @@ paths:
 
 #  /user/setScrQstn:
 #    $ref: './paths/usrSecury/setScrQstn.yaml'
+  /api/captcha :
+    get:
+      tags:
+        - user
+      summary: 获取验证码
+      responses:
+        "200":
+          description:  返回 PNG 图片（Swagger UI 将以下载方式展示）
+          content:
+            image/png:
+              schema:
+                type: string
+                format: binary
   /invstAcc/me:
     get:
       tags:
