--- a/pom.xml
+++ b/pom.xml
@@ -674,8 +674,18 @@
             <version>8.0.30</version> <!-- Use the latest version -->
         </dependency>
 
+    <dependency>
+        <groupId>javax.validation</groupId>
+        <artifactId>validation-api</artifactId>
+        <version>2.0.1.Final</version>
+    </dependency>
 
 
+    <dependency>
+        <groupId>cn.hutool</groupId>
+        <artifactId>hutool-core</artifactId>
+        <version>5.8.26</version> <!-- 建议使用最新稳定版 -->
+    </dependency>
 
 
 
